--- a/love.html
+++ b/love.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>1996 - DengSir</title>
+    <title>-WWB-&-MKX-</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!--<meta itemprop="image" content="./images/fenxiang.png" />-->
@@ -134,7 +134,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("可鑫|我们|相爱|100|天啦|仅此|纪念|未来|日子|我愿|与你|携手|相伴|不离|不弃|感谢|你对|我的|照顾|还有|关心|love|you|#countdown 3|#time");
+            S.UI.simulate("可鑫|我们|相爱|100|天啦|仅此|纪念|未来|日子|我愿|与你|携手|相伴|不离|不弃|感谢|你对|我的|照顾|还有|关心|love|you|我|比较|笨!|不知|怎么|表达|但是|真的|很爱|很爱|你!|希望|我们|还有|无数|100|天!|爱你|的|老公|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
@@ -667,6 +667,7 @@
     }());
     S.init();
 </script>
+//made 王文博
 <audio autoplay="autoplay" loop="loop">
     <source src="http://m10.music.126.net/20180509183512/5ae461e9a42675d782840bf139b05c60/ymusic/e492/ea7a/6a27/8799d19e52d9bbe3ae15febb03d7efdb.mp3" type="audio/mpeg">
 </audio>
