--- a/love.html
+++ b/love.html
@@ -103,7 +103,7 @@
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
-    We fell in love
+    感谢有你，愿今生相伴
     <br/>
     <span id="span_dt_dt"></span>
 </p>
@@ -669,7 +669,7 @@
 </script>
 //made 王文博
 <audio autoplay="autoplay" loop="loop">
-    <source src="http://m10.music.126.net/20180509183512/5ae461e9a42675d782840bf139b05c60/ymusic/e492/ea7a/6a27/8799d19e52d9bbe3ae15febb03d7efdb.mp3" type="audio/mpeg">
+    <source src="https://sf-sycdn.kuwo.cn/ce3cc9bd134b4b45a5076a6c2f27eec8/5d025e90/resource/n2/16/33/1758621210.mp3">
 </audio>
 </body>
 </html>
