--- a/makexin.html
+++ b/makexin.html
@@ -1,8 +1,6 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="HandheldFriendly" content="true">
     
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <title>隐私政策</title>
+    <title>麻可鑫个人作品集</title>
     <style>*{background-repeat:no-repeat;}
     </style>
 </head>
