--- a/makexin.html
+++ b/makexin.html
@@ -7,7 +7,8 @@
 
 <body>
     <div id="biaoti">
-       <embed width=100% height=100% src="makexin.pdf"></embed>
+       <div>
+       	<img src="061818013338.jpg" style="width: 100%;"/></div> 
     </div>
 
 
