--- a/makexin.html
+++ b/makexin.html
@@ -8,7 +8,26 @@
 <body>
     <div id="biaoti">
        <div>
-       	<img src="061818013338.jpg" style="width: 100%;"/></div> 
+       	<img src="zuopin/061818201783_0makexin_1.jpeg" style="width: 100%;"/></div> 
+       	<img src="zuopin/061818201783_0makexin_2.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_3.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_4.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_5.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_6.jpeg" style="width: 100%;"/></div> 
+       	<img src="zuopin/061818201783_0makexin_7.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_8.jpeg" style="width: 100%;"/></div> 
+       	<img src="zuopin/061818201783_0makexin_9.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_10.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_11.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_12.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_13.jpeg" style="width: 100%;"/></div> 
+       	<img src="zuopin/061818201783_0makexin_14.jpeg" style="width: 100%;"/></div>
+		<img src="zuopin/061818201783_0makexin_15.jpeg" style="width: 100%;"/></div> 
+       	<img src="zuopin/061818201783_0makexin_16.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_17.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_18.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_19.jpeg" style="width: 100%;"/></div>
+       	<img src="zuopin/061818201783_0makexin_20.jpeg" style="width: 100%;"/></div> 
     </div>
 
 
